# py-text-table

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml
src/philiprehberger_text_table/: __init__.py
tests/: test_import.py  test_table.py
