[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-text-table"
version = "0.1.4"
description = "Render data as clean ASCII/Unicode tables in the terminal with zero configuration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
keywords = ["table", "terminal", "ascii", "unicode", "cli", "format"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-text-table"
Repository = "https://github.com/philiprehberger/py-text-table"
Issues = "https://github.com/philiprehberger/py-text-table/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_text_table"]
