[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-text-table"
version = "0.1.7"
description = "Render data as clean ASCII/Unicode tables in the terminal with zero configuration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
keywords = ["table", "terminal", "ascii", "cli", "format"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-text-table#readme"
Repository = "https://github.com/philiprehberger/py-text-table"
Issues = "https://github.com/philiprehberger/py-text-table/issues"
Changelog = "https://github.com/philiprehberger/py-text-table/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_text_table"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
